<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAbhishek">
    <TextView
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/JayGanesh"
        android:textSize="40dp"
        android:gravity="center"
        />

    <LinearLayout
        android:id="@+id/non_chanigeable"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_title"
        android:orientation="horizontal"
        android:padding="20dp"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="Abhishek Type " />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gurijiche_name"
                android:background="@drawable/inputboxbg">

                <Spinner
                    android:id="@+id/selectAbhishekType"
                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints="name"

                    android:dropDownSelector="@color/black"

                    android:popupElevation="@dimen/cardview_compat_inset_shadow"></Spinner>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:layout_weight="1">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="6">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:paddingStart="10dp"
        android:layout_height="wrap_content"
        android:text="Guruji " android:layout_weight="5"/>
</LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/inputboxbg"
                android:hint="@string/gurijiche_name">

                <Spinner

                    android:id="@+id/selectGuruji"
                    android:popupBackground="@drawable/bg2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints="name"
                    android:dropDownSelector="@color/black"
                    android:popupElevation="@dimen/cardview_compat_inset_shadow"
                    ></Spinner>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/non_chanigeable"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/inputboxbg"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <EditText
                    android:id="@+id/NameInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:required="true"
                    android:paddingStart="10dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <EditText
                    android:id="@+id/MobileNo"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact"
                    android:inputType="phone"
                    android:paddingStart="10dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:paddingTop="0dp">

                <EditText
                    android:id="@+id/CityInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:inputType="text"
                    android:paddingStart="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp">



                <Spinner
                    android:id="@+id/GotraInput"
                    style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/inputboxbg"
                    android:hint="@string/gotra"
                    android:inputType="text"

                    android:paddingStart="5dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/bgm"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textSize="16dp"
                android:text="@string/gotra"
                android:translationY="-67dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/inputboxbg"
                android:orientation="vertical"
                android:paddingStart="5dp"
                android:paddingTop="10dp"
                android:paddingEnd="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:text="Payment Mode:" />

                <RadioGroup
                    android:id="@+id/Payment_mode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:textDirection="rtl">

                    <RadioButton
                        android:id="@+id/cash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Cash" />

                    <RadioButton
                        android:id="@+id/online"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Online" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"

                android:background="@drawable/inputboxbg"
                android:orientation="vertical"
                android:paddingStart="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="Tree Offerings:" />

                <RadioGroup
                    android:id="@+id/TreeOffering"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:textDirection="rtl">

                    <RadioButton
                        android:id="@+id/Ho"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Yes" />

                    <RadioButton
                        android:id="@+id/nahi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No" />

                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/scrollView2"/>

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:translationY="45dp"
        android:layout_below="@id/header_title"
        android:layout_alignParentEnd="true"
        android:layout_weight="1"
        >
        <ImageView
            android:id="@+id/button2"
            android:layout_width="20dp"
            android:layout_height="20dp"

            android:layout_weight="1"
            android:layout_marginEnd="30dp"
            android:src="@drawable/guruji_edit"
            android:text="Add"
            android:layout_below="@id/header_title"
            android:layout_alignParentEnd="true"
            />
    </LinearLayout>

</RelativeLayout>